<resources>
    <string name="app_name">Submissionwindi</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t Have an Account?</string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="nama">Nama</string>
    <string name="continues">Continue</string>
    <string name="splash">Splash</string>
    <string name="deksripsi">Deksripsi</string>
</resources>